templates/full-hero-page/full-hero-page.css
.full-hero-page main .hero-wrapper h1 {
  color: var(--color-purple);
  font-size: var(--heading-font-size-xl);
  margin-top: 1rem;
}

.full-hero-page-text {
  padding: 2rem 1.5rem;
}

.full-hero-page main .hero-wrapper {
  display: flex;
  flex-direction: column-reverse;
}

.full-hero-page main .section:not(:first-child), .full-hero-page main .hero {
  background-color: var(--background-color-light);
}

.full-hero-page main .hero {
  padding: 0 0 1.5rem;
}

.full-hero-page main .hero picture {
  margin: 0;
}

.full-hero-page main .hero > div > div {
  overflow: hidden;
}

.full-hero-page main .disclosure-container {
  padding: 0 1.5rem;
}

.full-hero-page main .disclosure {
  margin: 0;
  padding: 0 0 2rem;
  text-align: center;
}

.full-hero-page main .section.center {
  text-align: center;
  padding-top: 0;
}

.full-hero-page main .section.center h2 {
  padding-top: 0;
  margin-top: 0;
}

.full-hero-page main .section.blade-container picture img {
  border-radius: 10px;
}

.full-hero-page main .section h3 {
  margin-top: 2rem;
}

.full-hero-page main .section .button-container {
  margin-bottom: 2rem;
}

@media (min-width: 768px) {
  .full-hero-page main .hero picture {
    position: unset;
    z-index: unset;
  }

  .full-hero-page main .blade > div {
    align-items: center;
  }

  .full-hero-page main .blade-wrapper {
    margin-top: 0;
  }
}

@media (min-width: 1024px) {
  .full-hero-page main .hero {
    padding: 0 0 1.5rem;
  }

  .full-hero-page main .hero > div {
    margin: 0;
    max-width: unset;
  }

  .full-hero-page-text {
    max-width: 1344px;
    width: 40%;
    margin: 0;
    padding: 0;
    height: 500px;
    position: absolute;
    top: 7vw;
    left: 14%;
  }
}

